# multi-agent-workflow

./: .gitignore  README.md  orchestrator.py  pyproject.toml
a2a/: doc_agent.py  doc_agent_a2a_server.py
mcp/: __init__.py  doc_mcp_server.py
mcp/docs/: coding_docs.md
