[project]
name = "multi-agent-workflow"
version = "0.1.0"
description = "Multi agent workflow using a2a and mcp."
authors = [
    {name = "Sohaib"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "langgraph (>=1.0.5,<2.0.0)",
    "fastmcp (>=2.14.1,<3.0.0)",
    "langchain-mcp-adapters (>=0.2.1,<0.3.0)",
    "langgraph-a2a-server (>=0.1.6,<0.2.0)",
    "a2a (>=0.44,<0.45)",
    "langchain (>=1.2.0,<2.0.0)",
    "langgraph-a2a-client (>=0.1.5,<0.2.0)",
    "mcp-contextforge-gateway (>=0.9.0,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
